--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Generic AI Agent using OpenAI",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node ./index.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "openai": "^4.103.0"
   }
 }
